--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "express": "^4.19.2",
+    "google-translate-api-x": "^10.6.8",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.3.1",
@@ -17,6 +20,7 @@
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "react-transition-group": "^4.4.5",
+    "request": "^2.88.2",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.3",
     "web-vitals": "^2.1.4"
@@ -50,5 +54,10 @@
     "@babel/preset-env": "^7.24.5",
     "@babel/preset-react": "^7.24.1",
     "babel-loader": "^9.1.3"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
